Fixed scrollbar to support preference dialog and switcher widget.

--- a/style.css
+++ b/style.css
@@ -180,7 +180,37 @@
     min-width: 8px;
 }
 
-.preference_scrollbar {
+.preference_scrollbar slider {
+ 	background-color: rgba(16, 16, 16, 0.5);
+    box-shadow:none;
+  	border: 1px;
+  	border-color: transparent;
+    min-width: 4px;
+	margin-top: 2px;
+	margin-bottom: 2px;
+}
+
+.preference_scrollbar slider:hover {
+ 	background-color: rgba(16, 16, 16, 0.7);
+ 	box-shadow: none;
+ 	border: 1px;
+ 	border-color: transparent;
+    min-width: 8px;
+	margin-top: 2px;
+	margin-bottom: 2px;
+}
+
+.preference_scrollbar slider:hover:active {
+ 	background-color: rgba(16, 16, 16, 0.8);
+ 	box-shadow: none;
+ 	border: 1px;
+ 	border-color: transparent;
+    min-width: 8px;
+	margin-top: 2px;
+	margin-bottom: 2px;
+}
+
+.switcher_scrollbar {
 	padding-right: 2px;
 	background: transparent;
 	box-shadow: none;
@@ -188,7 +218,7 @@
     min-width: 0px;
 }
 
-.preference_scrollbar slider {
+.switcher_scrollbar slider {
 	background-color: transparent;
     box-shadow:none;
 	border: 1px;
